Set max heap and perm gen for non-Java 8 builds